--- a/stacks/rxresume/compose.yaml
+++ b/stacks/rxresume/compose.yaml
@@ -51,7 +51,7 @@ services:
       traefik.http.routers.printer.middlewares: "localonly@file"
       traefik.http.routers.printer.rule: "Host(`printer.${local_domain}`)"
       traefik.http.routers.printer.tls.certresolver: "cloudflare"
-      traefik.http.services.printer.loadbalancer.server.port: 3000
+      traefik.http.services.printer.loadbalancer.server.url: 'http://chrome:3000'
 
   rxresume:
     <<: *logging-policy
@@ -103,4 +103,4 @@ services:
       traefik.http.routers.printer.middlewares: "allowedIPs@file"
       traefik.http.routers.rxresume.rule: "Host(`rx.${domain}`)"
       traefik.http.routers.rxresume.tls.certresolver: "cloudflare"
-      traefik.http.services.rxresume.loadbalancer.server.port: 3000
+      traefik.http.services.rxresume.loadbalancer.server.url: 'http://rxresume:3000'
