--- a/stacks/utils/compose.yaml
+++ b/stacks/utils/compose.yaml
@@ -36,7 +36,7 @@ services:
       traefik.http.routers.picsur.entryPoints: "https"
       traefik.http.routers.picsur.rule: "Host(`ps.${domain}`)"
       traefik.http.routers.picsur.tls.certresolver: "cloudflare"
-      traefik.http.services.picsur.loadbalancer.server.port: 8080
+      traefik.http.services.picsur.loadbalancer.server.url: 'http://picsur:8080'
   picsur_postgres:
     <<: *logging-policy
     image: postgres:${postgres_version:-14-alpine}
@@ -69,7 +69,7 @@ services:
       traefik.http.routers.privatebin.middlewares: "allowedIPs@file"
       traefik.http.routers.privatebin.rule: "Host(`pb.${domain}`)"
       traefik.http.routers.privatebin.tls.certresolver: "cloudflare"
-      traefik.http.services.privatebin.loadbalancer.server.port: 8080
+      traefik.http.services.privatebin.loadbalancer.server.url: 'http://privatebin:8080'
 
   # Send service
   send:
@@ -100,7 +100,7 @@ services:
       traefik.http.routers.send.middlewares: "allowedIPs@file"
       traefik.http.routers.send.rule: "Host(`send.${domain}`)"
       traefik.http.routers.send.tls.certresolver: "cloudflare"
-      traefik.http.services.send.loadbalancer.server.port: 1443
+      traefik.http.services.send.loadbalancer.server.url: 'http://send:1443'
   send_redis:
     <<: *logging-policy
     image: redis:${redis_version:-alpine}
@@ -130,7 +130,7 @@ services:
       traefik.http.routers.convertx.middlewares: "localonly@file"
       traefik.http.routers.convertx.rule: "Host(`cx.${local_domain}`)"
       traefik.http.routers.convertx.tls.certresolver: "cloudflare"
-      traefik.http.services.convertx.loadbalancer.server.port: 3000
+      traefik.http.services.convertx.loadbalancer.server.url: 'http://convertx:3000'
   ittools:
     image: 'corentinth/it-tools:${ittools_version:-latest}'
     container_name: ittools
@@ -143,7 +143,7 @@ services:
       traefik.http.routers.ittools.middlewares: "allowedIPs@file"
       traefik.http.routers.ittools.rule: "Host(`it.${domain}`)"
       traefik.http.routers.ittools.tls.certresolver: "cloudflare"
-      traefik.http.services.ittools.loadbalancer.server.port: 80
+      traefik.http.services.ittools.loadbalancer.server.url: 'http://ittools:80'
   myspeed:
     image: germannewsmaker/myspeed:${myspeed_version:-latest}
     container_name: myspeed
@@ -158,4 +158,4 @@ services:
       traefik.http.routers.myspeed.middlewares: "localonly@file"
       traefik.http.routers.myspeed.rule: "Host(`speed.${local_domain}`)"
       traefik.http.routers.myspeed.tls.certresolver: "cloudflare"
-      traefik.http.services.myspeed.loadbalancer.server.port: 5216
+      traefik.http.services.myspeed.loadbalancer.server.url: 'http://myspeed:5216'
