--- a/stacks/rxresume/compose.yaml
+++ b/stacks/rxresume/compose.yaml
@@ -100,7 +100,7 @@ services:
     labels:
       traefik.enable: "true"
       traefik.http.routers.rxresume.entrypoints: "https"
-      traefik.http.routers.printer.middlewares: "allowedIPs@file"
+      traefik.http.routers.rxresume.middlewares: "allowedIPs@file"
       traefik.http.routers.rxresume.rule: "Host(`rx.${domain}`)"
       traefik.http.routers.rxresume.tls.certresolver: "cloudflare"
       traefik.http.services.rxresume.loadbalancer.server.url: 'http://rxresume:3000'
