--- a/stacks/utils/example.env
+++ b/stacks/utils/example.env
@@ -9,12 +9,12 @@ local_domain=localonly.yourdomain.com
 uid=1000
 gid=1000
 
-# Image versions
+# Image settings
 convertx_version=latest
 ittools_version=latest
 myspeed_version=latest
 send_version=latest
-privatebin_version=latest
+privatebin_version=stable
 postgres_version=latest
 picsur_version=latest
 redis_version=latest
@@ -23,7 +23,7 @@ redis_version=latest
 picsur_dbpass='a_secure_db_password'
 picsur_adminpass='a_secure_db_admin_password'
 
-# Send Settings
+# Send settings
 send_access_key='a_long_base64_string'
 send_secret_key='a_long_base64_string'
 
