example.env consistency update

--- a/stacks/adguardhome/example.env
+++ b/stacks/adguardhome/example.env
@@ -1,6 +1,6 @@
 # Storage settings
 data=/path/to/host/storage
 
-# Image versions
+# Image settings
 adguard_sync_version=latest
 adguard_version=latest
