--- a/stacks/docs/example.env
+++ b/stacks/docs/example.env
@@ -10,7 +10,7 @@ uid=1000
 gid=1000
 timezone=Your/Timezone
 
-# Image versions
+# Image settings
 bookstack_version=latest
 grafana_version=latest
 mariadb_version=latest
