--- a/stacks/garage/example.env
+++ b/stacks/garage/example.env
@@ -8,6 +8,6 @@ local_domain=localonly.yourdomain.com
 # General settings
 timezone=Your/Timezone
 
-# Image versions
+# Image settings
 garage_version=latest
 garage_webui_version=latest
