--- a/stacks/gitea/example.env
+++ b/stacks/gitea/example.env
@@ -4,7 +4,7 @@ data=/path/to/host/storage
 # Domain settings
 domain=yourdomain.com
 
-# Image versions
+# Image settings
 gitea_version=latest
 postgres_version=latest
 runner_version=latest
