--- a/stacks/homeassistant/example.env
+++ b/stacks/homeassistant/example.env
@@ -5,5 +5,5 @@ data=/path/to/host/storage
 domain=yourdomain.com
 local_domain=localonly.yourdomain.com
 
-# Image versions
+# Image settings
 homeassistant_version=latest
