--- a/stacks/immich/example.env
+++ b/stacks/immich/example.env
@@ -8,7 +8,7 @@ local_domain=localonly.yourdomain.com
 # General settings
 timezone=Your/Timezone
 
-# Image versions
+# Image settings
 immich_version=latest
 
 # Postgres settings
