--- a/stacks/media/example.env
+++ b/stacks/media/example.env
@@ -11,7 +11,7 @@ gid=1000
 umask=000
 timezone=Your/Timezone
 
-# Image versions
+# Image settings
 calibre_web_version=latest
 jellyfin_version=latest
 jellyseerr_version=latest
