--- a/stacks/proxies/example.env
+++ b/stacks/proxies/example.env
@@ -4,7 +4,7 @@ data=/path/to/host/storage
 # General settings
 timezone=Your/Timezone
 
-# Image versions
+# Image settings
 gluetun_version=latest
 socks5proxy_version=latest
 tor_privoxy_version=latest
