--- a/stacks/reverseproxy/example.env
+++ b/stacks/reverseproxy/example.env
@@ -12,7 +12,7 @@ uid=1000
 gid=1000
 timezone=Your/Timezone
 
-# Image versions
+# Image settings
 authelia_version=latest
 crowdsec_bouncer_version=latest
 crowdsec_version=latest
