--- a/stacks/rxresume/example.env
+++ b/stacks/rxresume/example.env
@@ -5,7 +5,7 @@ data=/path/to/host/storage
 domain=yourdomain.com
 local_domain=localonly.yourdomain.com
 
-# Image versions
+# Image settings
 chrome_version=latest
 postgres_version=latest
 rxresume_version=latest
