--- a/stacks/website/example.env
+++ b/stacks/website/example.env
@@ -6,11 +6,11 @@ domain=yourdomain.com
 local_domain=localonly.yourdomain.com
 
 # General settings
-timezone=Your/Timezone
 uid=1000
 gid=1000
+timezone=Your/Timezone
 
-# Image versions
+# Image settings
 copyparty_version=latest
 freshrss_version=latest
 homepage_version=latest
