--- a/stacks/paperlessngx/example.env
+++ b/stacks/paperlessngx/example.env
@@ -9,7 +9,7 @@ uid=1000
 gid=1000
 timezone=Your/Timezone
 
-# Image versions
+# Image settings
 keydb_version=latest
 paperlessngx_version=latest
 postgres_version=latest
