add machine learning and fix some networking

--- a/stacks/immich/compose.yaml
+++ b/stacks/immich/compose.yaml
@@ -16,8 +16,9 @@ services:
     container_name: immich_server
     restart: unless-stopped
     depends_on:
-      - redis
       - database
+      - immich-machine-learning
+      - redis
     networks:
       proxy: null
       default: null
@@ -38,13 +39,28 @@ services:
       traefik.http.routers.immich.rule: "Host(`im.${domain}`) || Host(`im.${local_domain}`)"
       traefik.http.routers.immich.tls.certresolver: "cloudflare"
       traefik.http.services.immich.loadbalancer.server.url: "http://immich_server:2283"
+  immich-machine-learning:
+    image: ghcr.io/immich-app/immich-machine-learning:${immich_version:-release}
+    container_name: immich_machine_learning
+    restart: unless-stopped
+    networks:
+      default: null
+    environment:
+      TZ: ${timezone:-UTC}
+      DB_DATABASE_NAME: postgres
+      DB_USERNAME: postgres
+      DB_PASSWORD: ${db_pass:-postgres}
+    volumes:
+      - ${data:-.}/model-cache:/cache
+    healthcheck:
+      disable: false
   redis:
     <<: *logging-policy
     image: docker.io/valkey/valkey:8-bookworm
     container_name: immich_redis
     restart: unless-stopped
     networks:
-      proxy: null
+      default: null
     healthcheck:
       test: redis-cli ping || exit 1
   database:
@@ -53,7 +69,7 @@ services:
     container_name: immich_postgres
     restart: unless-stopped
     networks:
-      proxy: null
+      default: null
     shm_size: 128mb
     environment:
       POSTGRES_DB: postgres
