--- a/stacks/adguardhome/example.env
+++ b/stacks/adguardhome/example.env
@@ -4,3 +4,7 @@ data=/path/to/host/storage
 # Image settings
 adguard_sync_version=latest
 adguard_version=latest
+
+# App settings
+log_level=warn
+
