--- a/stacks/media/example.env
+++ b/stacks/media/example.env
@@ -16,3 +16,7 @@ calibre_web_version=latest
 jellyfin_version=latest
 jellyseerr_version=latest
 navidrome_version=latest
+
+# App settings
+log_level=warn
+
