--- a/stacks/reverseproxy/examples/traefik.yml
+++ b/stacks/reverseproxy/examples/traefik.yml
@@ -1,32 +1,29 @@
 api:
   dashboard: true
-  insecure: true
+  insecure: false
 
 entryPoints:
   metrics:
     address: :8082
   https:
     address: ":443"
-    # Needed for Immich uploads
+    http3: {}
+    forwardedHeaders:
+      insecure: false
+      trustedIPs:
+        - "172.16.0.0/12"
+    proxyProtocol:
+      insecure: false
+      trustedIPs:
+        - "172.16.0.0/12"
     transport:
       respondingTimeouts:
         readTimeout: 600s
         idleTimeout: 600s
         writeTimeout: 600s
-    http3: {}
-    forwardedHeaders:
-      insecure: false
-    proxyProtocol:
-      trustedIPs:
-        - "172.16.0.0/12"
-      insecure: false
-    forwardedHeaders:
-      insecure: false
-      trustedIPs:
-        - "172.16.0.0/12"
     http:
-      middlewares:
-        - crowdsec-bouncer@file
+     middlewares:
+       - crowdsec-bouncer@docker
 
 serversTransport:
   insecureSkipVerify: true
