--- a/stacks/reverseproxy/examples/traefik.yml
+++ b/stacks/reverseproxy/examples/traefik.yml
@@ -1,10 +1,37 @@
+accessLog:
+  filePath: "/var/log/traefik/access.log"
+  filters:
+    statusCodes:
+      - "300-399"
+      - "400-499"
+      - "500-599"
+    retryAttempts: true
+    minDuration: "1000ms"
+
 api:
   dashboard: true
   insecure: false
 
+certificatesResolvers:
+  your-cert-provider:
+    acme:
+      email: youremail@example.com
+      storage: /acme.json
+      caServer: https://acme-v02.api.letsencrypt.org/directory
+      dnsChallenge:
+        provider: your-cert-provider
+        resolvers:
+          - "1.1.1.1:53"
+          - "1.0.0.1:53"
+
 entryPoints:
-  metrics:
-    address: :8082
+  http:
+    address: :80
+    http:
+      redirections:
+        entryPoint:
+          to: https
+          scheme: https
   https:
     address: ":443"
     http3: {}
@@ -22,31 +49,23 @@ entryPoints:
         idleTimeout: 600s
         writeTimeout: 600s
     http:
-     middlewares:
-       - crowdsec-bouncer@docker
+      middlewares:
+        - crowdsec-bouncer@docker
+      tls:
+        certResolver: your-cert-provider
+        domains:
+          - main: yourdomain.com
+            sans:
+              - '*.yourdomain.com'
+  metrics:
+    address: :8082
 
-serversTransport:
-  insecureSkipVerify: true
-
-providers:
-  docker:
-    endpoint: "unix:///var/run/docker.sock"
-    exposedByDefault: false
-  file:
-    filename: /dynamic.yml
-    watch: true
-
-certificatesResolvers:
-  cloudflare:
-    acme:
-      email: youremail@example.com
-      storage: /acme.json
-      caServer: https://acme-v02.api.letsencrypt.org/directory
-      dnsChallenge:
-        provider: cloudflare
-        resolvers:
-          - "1.1.1.1:53"
-          - "1.0.0.1:53"
+log:
+  level: "INFO"
+  maxSize: 25
+  maxAge: 7
+  compress: true
+  filePath: "/var/log/traefik/traefik.log"
 
 metrics:
   prometheus:
@@ -59,19 +78,13 @@ metrics:
       - 5.0
     entryPoint: metrics
 
-log:
-  level: "INFO"
-  maxSize: 25
-  maxAge: 7
-  compress: true
-  filePath: "/var/log/traefik/traefik.log"
+providers:
+  docker:
+    endpoint: "unix:///var/run/docker.sock"
+    exposedByDefault: false
+  file:
+    filename: /dynamic.yml
+    watch: true
 
-accessLog:
-  filePath: "/var/log/traefik/access.log"
-  filters:
-    statusCodes:
-      - "300-399"
-      - "400-499"
-      - "500-599"
-    retryAttempts: true
-    minDuration: "1000ms"
+serversTransport:
+  insecureSkipVerify: true
