use traefik for adguardhome

--- a/stacks/adguardhome/example.env
+++ b/stacks/adguardhome/example.env
@@ -1,6 +1,9 @@
 # Storage settings
 data=/path/to/host/storage
 
+# Domain settings
+domain=yourdomain.com
+
 # Image settings
 adguard_sync_version=latest
 adguard_version=latest
