--- a/stacks/adguardhome/compose.yaml
+++ b/stacks/adguardhome/compose.yaml
@@ -1,5 +1,7 @@
 networks:
   default: null
+  proxy:
+    external: true
 x-logging-policy: &logging-policy
   logging:
     driver: local
@@ -15,13 +17,19 @@ services:
     restart: unless-stopped
     networks:
       default: null
+      proxy: null
     volumes:
       - ${data:-.}/adguardhome/work:/opt/adguardhome/work
       - ${data:-.}/adguardhome/conf:/opt/adguardhome/conf
     ports:
       - "53:53/tcp"
       - "53:53/udp"
-      - "3000:3000/tcp"
+    labels:
+      traefik.enable: "true"
+      traefik.http.routers.adguardhome.entryPoints: "https"
+      traefik.http.routers.adguardhome.middlewares: "localonly@file"
+      traefik.http.routers.adguardhome.rule: "Host(`ad.${domain}`)"
+      traefik.http.services.adguardhome.loadbalancer.server.url: "http://adguardhome:3000"
   adguardhome-sync:
     <<: *logging-policy
     image: ghcr.io/bakito/adguardhome-sync:${adguard_sync_version:-latest}
