--- a/stacks/homeassistant/compose.yaml
+++ b/stacks/homeassistant/compose.yaml
@@ -29,3 +29,24 @@ services:
       traefik.http.routers.homeassistant.middlewares: "localonly@file"
       traefik.http.routers.homeassistant.rule: "Host(`ha.${domain}`)"
       traefik.http.services.homeassistant.loadbalancer.server.url: "http://homeassistant:8123"
+  zwave-js-ui:
+    container_name: zwave-js-ui
+    image: zwavejs/zwave-js-ui:{zwave_version:-latest}
+    restart: always
+    tty: true
+    stop_signal: SIGINT
+    environment:
+      SESSION_SECRET: ${key:?change_me}
+      TZ: ${timezone:-UTC}
+    networks:
+      - proxy
+    devices:
+      - '${device_id}:/dev/zwave'
+    volumes:
+      - ${data:-.}/zwave-config:/usr/src/app/store
+    labels:
+      traefik.enable: "true"
+      traefik.http.routers.zwave.entryPoints: "https"
+      traefik.http.routers.zwave.middlewares: "localonly@file"
+      traefik.http.routers.zwave.rule: "Host(`zw.${domain}`)"
+      traefik.http.services.zwave.loadbalancer.server.url: "http://zwave-js-ui:8091"
