--- a/stacks/homeassistant/example.env
+++ b/stacks/homeassistant/example.env
@@ -4,5 +4,13 @@ data=/path/to/host/storage
 # Domain settings
 domain=yourdomain.com
 
+# General settings
+timezone=Your/Timezone
+
 # Image settings
 homeassistant_version=latest
+zwave_version=latest
+
+# Zwave settings
+key=my-long-and-secure-key
+device_id=/dev/serial/by-id/insert_stick_reference_here
