name app settings, remove 3xx codes from traefik log example

--- a/stacks/adguardhome/example.env
+++ b/stacks/adguardhome/example.env
@@ -8,6 +8,6 @@ domain=yourdomain.com
 adguard_sync_version=latest
 adguard_version=latest
 
-# App settings
+# Adguard Sync settings
 log_level=warn
 
