--- a/stacks/media/example.env
+++ b/stacks/media/example.env
@@ -17,6 +17,6 @@ jellyfin_version=latest
 jellyseerr_version=latest
 navidrome_version=latest
 
-# App settings
+# Jellyseerr settings
 log_level=warn
 
