--- a/stacks/rxresume/example.env
+++ b/stacks/rxresume/example.env
@@ -15,7 +15,7 @@ db_pass="a_secure_db_password"
 # Chrome settings
 chrome_token='a_long_and_secure_secret'
 
-# App settings
+# RxResume settings
 access_token='a_long_and_secure_secret'
 refresh_token='a_long_and_secure_secret'
 s3_access_key='a_long_and_secure_secret'
