setup zigbee2mqtt and remove privileged option

--- a/stacks/homeassistant/example.env
+++ b/stacks/homeassistant/example.env
@@ -9,7 +9,13 @@ timezone=Your/Timezone
 
 # Image settings
 homeassistant_version=latest
+mqtt_version=latest
+zigbee2mqtt_version=latest
 zwave_version=latest
 
 # Zwave settings
 key=my-long-and-secure-key
+zwave_device="serial-id-of-zwave-adapter"
+
+# Zigbee2mqtt settings
+zigbee_device="serial-id-of-zigbee-adapter"
