--- a/stacks/homeassistant/compose.yaml
+++ b/stacks/homeassistant/compose.yaml
@@ -1,6 +1,7 @@
 networks:
   proxy:
     external: true
+  ha_mqtt:
 x-logging-policy: &logging-policy
   logging:
     driver: local
@@ -14,9 +15,12 @@ services:
     image: ghcr.io/home-assistant/home-assistant:${homeassistant_version:-stable}
     container_name: homeassistant
     restart: unless-stopped
-    privileged: true
+    depends_on:
+      - zwave-js-ui
+      - zigbee2mqtt
     networks:
       proxy: null
+      ha_mqtt: null
     volumes:
       - ${data:-.}/homeassistant:/config # Local storage
       - /etc/localtime:/etc/localtime:ro # Timezone synchronization
@@ -32,19 +36,55 @@ services:
     image: zwavejs/zwave-js-ui:${zwave_version:-latest}
     container_name: zwave-js-ui
     restart: unless-stopped
-    privileged: true
     tty: true
     stop_signal: SIGINT
     networks:
-      - proxy
+      proxy:
     environment:
       SESSION_SECRET: ${key:?change_me}
       TZ: ${timezone:-UTC}
     volumes:
       - ${data:-.}/zwave-config:/usr/src/app/store
+    devices:
+      - /dev/serial/by-id/${zwave_device:?}:/dev/ttyACM0
     labels:
       traefik.enable: "true"
       traefik.http.routers.zwave.entryPoints: "https"
       traefik.http.routers.zwave.middlewares: "localonly@file"
       traefik.http.routers.zwave.rule: "Host(`zw.${domain}`)"
       traefik.http.services.zwave.loadbalancer.server.url: "http://zwave-js-ui:8091"
+  zigbee2mqtt:
+    <<: *logging-policy
+    container_name: zigbee2mqtt
+    image: ghcr.io/koenkk/zigbee2mqtt:${zigbee2mqtt_version:-latest}
+    restart: unless-stopped
+    depends_on:
+      - mqtt
+    networks:
+      proxy:
+      ha_mqtt:
+    environment:
+      TZ: ${timezone:-UTC}
+      ZIGBEE2MQTT_CONFIG_MQTT_SERVER: "mqtt://mqtt:1883"
+      ZIGBEE2MQTT_CONFIG_SERIAL_PORT: /dev/ttyACM0
+    volumes:
+      - ${data:-.}/zigbee2mqtt:/app/data
+      - /run/udev:/run/udev:ro
+    devices:
+      - /dev/serial/by-id/${zigbee_device:?}:/dev/ttyACM0
+    labels:
+      traefik.enable: "true"
+      traefik.http.routers.zigbee2mqtt.entryPoints: "https"
+      traefik.http.routers.zigbee2mqtt.middlewares: "localonly@file"
+      traefik.http.routers.zigbee2mqtt.rule: "Host(`zb.${domain}`)"
+      traefik.http.services.zigbee2mqtt.loadbalancer.server.url: "http://zigbee2mqtt:8080"
+  mqtt:
+    <<: *logging-policy
+    container_name: mqtt
+    image: eclipse-mosquitto:${mqtt_version:-latest}
+    restart: unless-stopped
+    networks:
+      ha_mqtt:
+    command: "mosquitto -c /mosquitto-no-auth.conf"
+    volumes:
+      - ${data:-.}/mqtt:/mosquitto/config
