--- a/stacks/immich/compose.yaml
+++ b/stacks/immich/compose.yaml
@@ -60,6 +60,8 @@ services:
     restart: unless-stopped
     networks:
       default: null
+    volumes:
+      - ${data:-.}/redis:/data
     healthcheck:
       test: redis-cli ping || exit 1
   database:
