--- a/stacks/immich/example.env
+++ b/stacks/immich/example.env
@@ -9,6 +9,7 @@ timezone=Your/Timezone
 
 # Image settings
 immich_version=latest
+keydb_version=latest
 
 # Postgres settings
 db_pass="a_secure_db_password"
