--- a/stacks/utils/example.env
+++ b/stacks/utils/example.env
@@ -17,7 +17,7 @@ send_version=latest
 privatebin_version=stable
 postgres_version=latest
 picsur_version=latest
-redis_version=latest
+keydb_version=latest
 
 # Picsur settings
 picsur_dbpass='a_secure_db_password'
