add ntfy to docs stack

--- a/stacks/docs/example.env
+++ b/stacks/docs/example.env
@@ -13,6 +13,7 @@ timezone=Your/Timezone
 bookstack_version=latest
 grafana_version=latest
 mariadb_version=latest
+ntfy_version=latest
 prometheus_version=latest
 uptimekuma_version=latest
 
