--- a/stacks/docs/compose.yaml
+++ b/stacks/docs/compose.yaml
@@ -59,16 +59,42 @@ services:
       MYSQL_PASSWORD: ${db_pass}
     volumes:
       - ${data:-.}/bookstack/db:/config
-
+  ntfy:
+    image: binwiederhier/ntfy:${ntfy_version:-latest}
+    container_name: ntfy
+    restart: unless-stopped
+    user: ${uid:-1000}:${gid:-1000}
+    init: true
+    command:
+      - serve
+    networks:
+      proxy: null
+    healthcheck:
+        test: ["CMD-SHELL", "wget -q --tries=1 http://localhost:80/v1/health -O - | grep -Eo '\"healthy\"\\s*:\\s*true' || exit 1"]
+        interval: 60s
+        timeout: 10s
+        retries: 3
+        start_period: 40s
+    environment:
+      TZ: ${timezone:-UTC}
+    volumes:
+      - ${data:-.}/ntfy/cache:/var/cache/ntfy
+      - ${data:-.}/ntfy/data:/etc/ntfy
+    labels:
+      traefik.enable: "true"
+      traefik.http.routers.ntfy.entryPoints: "https"
+      traefik.http.routers.ntfy.middlewares: "localonly@file"
+      traefik.http.routers.ntfy.rule: "Host(`n.${domain}`)"
+      traefik.http.services.ntfy.loadbalancer.server.url: "http://ntfy:80"
   # Metrics service
   grafana:
     <<: *logging-policy
     image: grafana/grafana:${grafana_version:-latest}
     container_name: grafana
-    restart: always
+    user: ${uid:-1000}:${gid:-1000}
+    restart: unless-stopped
     depends_on:
       - prometheus
-    user: ${uid:-1000}
     security_opt:
       - no-new-privileges:true
     networks:
@@ -88,7 +114,7 @@ services:
     <<: *logging-policy
     image: prom/prometheus:${prometheus_version:-latest}
     container_name: prometheus
-    restart: always
+    restart: unless-stopped
     networks:
       proxy: null
     volumes:
@@ -107,7 +133,7 @@ services:
     <<: *logging-policy
     image: louislam/uptime-kuma:${uptimekuma_version:-latest}
     container_name: uptimekuma
-    restart: always
+    restart: unless-stopped
     networks:
       proxy: null
     volumes:
