add login and proxy support

--- a/stacks/docs/compose.yaml
+++ b/stacks/docs/compose.yaml
@@ -77,6 +77,10 @@ services:
         start_period: 40s
     environment:
       TZ: ${timezone:-UTC}
+      NTFY_BASE_URL: https://n.${domain}
+      NTFY_AUTH_DEFAULT_ACCESS: deny-all
+      NTFY_BEHIND_PROXY: true
+      NTFY_ENABLE_LOGIN: true
     volumes:
       - ${data:-.}/ntfy/cache:/var/cache/ntfy
       - ${data:-.}/ntfy/data:/etc/ntfy
