--- a/stacks/immich/compose.yaml
+++ b/stacks/immich/compose.yaml
@@ -29,6 +29,7 @@ services:
       DB_DATABASE_NAME: postgres
       DB_USERNAME: postgres
       DB_PASSWORD: ${db_pass:-postgres}
+      REDIS_HOSTNAME: immich_keydb
     volumes:
       - ${data:-.}/app:/data
       - /etc/localtime:/etc/localtime:ro
