--- a/stacks/reverseproxy/example.env
+++ b/stacks/reverseproxy/example.env
@@ -16,7 +16,7 @@ authelia_version=latest
 crowdsec_bouncer_version=latest
 crowdsec_version=latest
 lldap_version=latest
-traefik_verison=latest
+traefik_version=latest
 
 # Traefik settings
 cf_dns_api_token=some-token1 # generate this token from cloudflare
