--- a/stacks/utils/example.env
+++ b/stacks/utils/example.env
@@ -7,21 +7,18 @@ domain=yourdomain.com
 # General settings
 uid=1000
 gid=1000
+timezone=Your/Timezone
 
 # Image settings
 convertx_version=latest
 ittools_version=latest
+keydb_version=latest
 libretranslate_version=latest
 myspeed_version=latest
-send_version=latest
-privatebin_version=stable
 postgres_version=latest
-picsur_version=latest
-keydb_version=latest
-
-# Picsur settings
-picsur_dbpass='a_secure_db_password'
-picsur_adminpass='a_secure_db_admin_password'
+privatebin_version=stable
+send_version=latest
+slink_version=latest
 
 # Send settings
 send_access_key='a_long_base64_string'
