remove picsur settings

--- a/stacks/utils/compose.yaml
+++ b/stacks/utils/compose.yaml
@@ -1,5 +1,4 @@
 networks:
-  picsur: null
   send: null
   proxy:
     external: true
@@ -99,8 +98,8 @@ services:
       traefik.http.routers.slink.rule: "Host(`sl.${domain}`)"
       traefik.http.services.slink.loadbalancer.server.url: 'http://slink:3000'
       # No middleware for outbound images
-      traefik.http.routers.picsur-images.entrypoints: "https"
-      traefik.http.routers.picsur-images.rule: "Host(`sl.${domain}`) && PathPrefix(`/image/`)"
+      traefik.http.routers.slink-images.entrypoints: "https"
+      traefik.http.routers.slink-images.rule: "Host(`sl.${domain}`) && PathPrefix(`/image/`)"
   privatebin:
     <<: *logging-policy
     image: privatebin/nginx-fpm-alpine:${privatebin_version:-stable}
